# paroquant

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  STEPS.md  environment.yml  optimize.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-docker-images.yml  publish-to-pypi.yml
assets/: model_card.jinja
docker/: Dockerfile  Dockerfile.chat  Dockerfile.chat-cu129  Dockerfile.chat-cu130  Dockerfile.eval-reasoning  Dockerfile.vllm
experiments/: README.md  agent_demo.py  lm_eval.sh
experiments/ablations/: ft_only.sh  no_ft.sh  no_rotation.sh  no_scaling.sh  num_rotations.sh  num_samples.sh  redpajama.sh  rotation_only.sh  scaling_only.sh
experiments/baselines/: autoawq_cli.py  awq.sh  efficientqat.sh  fp16.sh  qtip.sh  spinquant.sh
experiments/optimize/: 4bit.sh  4bit_70b.sh  4bit_moe.sh
experiments/plots/: plot_channel_pairs.py  plot_init.py  plot_kernel_speedup.py  plot_optimization.sh  plot_rotation_optimization_convergence.py  plot_rotation_optimization_convergence_2.py  plot_weight_distribution.py
experiments/ppl/: awq.sh  awq_moe.sh  fp16.sh  omniquant.sh  spinquant.sh
experiments/tasks/: non_reasoning.sh  reasoning.sh
experiments/tasks/reasoning/: aime90.sh  environment.yml  gpqa_diamond.sh  gsm8k.sh  lighteval.sh  reasoning.py  requirements.txt
experiments/throughput/: bench.sh
experiments/throughputs/: bench.sh
inference_engine/generation/: __init__.py  base.py  transformers_backend.py  vllm_backend.py
inference_engine/model_executor/: __init__.py
inference_engine/model_executor/models/: cache_utils.py  llama.py  llama_fp16.py  qwen2.py  qwen3.py  qwen3_fp16.py  qwen3_vllm.py
inference_engine/model_executor/modules/: gemm_op.py  gemv_op.py  qmodule.py  rotation_linear.py
inference_engine/utils/: awq_conversion_utils.py  checkpoint_utils.py  model_utils.py  quantization_utils.py  rotation_utils.py
kernels/: AUTHORS  README.md  pybind.cpp  setup.py
kernels/paroquant_kernels/: __init__.py  interface.py
kernels/paroquant_kernels/awq_inference_kernels/: dequantize.cuh  dispatch_utils.cuh
kernels/paroquant_kernels/csrc/: rotation.cu  rotation.cuh
kernels/paroquant_kernels/src/: rotation.cu  rotation.cuh  rotation.h
paroquant/: __init__.py  convert_utils.py  module.py  optimize.py  quantizer.py  util.py
paroquant/cli/: agent.py  bench_mlx.py  bench_model.py  benchmark.py  chat.py  convert.py  eval_ppl.py  evaluate.py  export.py  optimize.py  pseudo_quant.py  real_quant.py  serve.py  serve_mlx.py
paroquant/export/: __init__.py  hf.py  math.py  options.py  pipeline.py  targets.py
paroquant/inference/: __init__.py  base.py
paroquant/kernels/: __init__.py
paroquant/optim/: optimize.py  qexperts.py  qlinear.py  quant.py  quantizer.py  rotation.py  train.py  util.py
paroquant/utils/: convert.py  quant.py
paroquant_inference_engine/model_executor/: __init__.py
paroquant_inference_engine/utils/: checkpoint_utils.py  convert_utils.py  lm_eval_adaptor.py  model_utils.py  quantization_utils.py  rotation_utils.py  transform_pt_to_ckpt.py
scripts/: bench_model.py  convert_paro_to_awq.py  demo.py  eval_ppl.py  interactive_gen.py  interactive_gen_vllm.py  pseudo_quant.py  real_quant.py
tests/: test_export_math.py  test_export_pipeline.py  test_export_targets.py  test_vllm_plugin.py  test_vllm_plugin_gpu.py
(+42 files in other folders)
